lts: Implement lean encoding part 9